--- a/about.html
+++ b/about.html
@@ -1,1 +1,28 @@
-One of my early memories related to technology was when my elementary school in San Jose became networked. I was fascinated by the bundles of cables going around the building and terminating in the computer lab. I spent a lot of time there asking a lot of questions about the internet and computers in general. When we eventually got a home computer and though I was still interested in computers in general, my interest in networking waned. When I graduated high school, I was accepted to a film program at SFSU but couldn’t afford it and went to a CCSF and entered the Cisco Networking Academy. Taking classes with Sam Bowne nurtured my interest in network security and motivated me to transfer to get Computer Science degree at CSUMB so I can join the network and security program. It has taken me some time to complete the program since I
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>About Me</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>About Me</h1>
+				<p>One of my early memories related to technology was when my elementary school in San Jose became networked. I was fascinated by the bundles of cables going around the building and terminating in the computer lab. I spent a lot of time there asking a lot of questions about the internet and computers in general. When we eventually got a home computer and though I was still interested in computers in general, my interest in networking waned. When I graduated high school, I was accepted to a film program at SFSU but couldn’t afford it and went to a CCSF and entered the Cisco Networking Academy. Taking classes with Sam Bowne nurtured my interest in network security and motivated me to transfer to get Computer Science degree at CSUMB so I can join the network and security program. It has taken me some time to complete the program since I
+</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
+        		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
