--- a/about.html
+++ b/about.html
@@ -14,8 +14,12 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>About Me</h1>
-				<p>One of my early memories related to technology was when my elementary school in San Jose became networked. I was fascinated by the bundles of cables going around the building and terminating in the computer lab. I spent a lot of time there asking a lot of questions about the internet and computers in general. When we eventually got a home computer and though I was still interested in computers in general, my interest in networking waned. When I graduated high school, I was accepted to a film program at SFSU but couldn’t afford it and went to a CCSF and entered the Cisco Networking Academy. Taking classes with Sam Bowne nurtured my interest in network security and motivated me to transfer to get Computer Science degree at CSUMB so I can join the network and security program. It has taken me some time to complete the program since I
-</p>
+				<p>One of my earliest tech related memories was when my elementary school in San Jose became networked. I was so fascinated by the bundles of cables going around the building and terminating in the computer lab. I spent a lot of time there asking a lot of questions about the internet and computers in general. We eventually got a home computer and though I was still interested in computers in general, my interest in networking waned.
+				</p>	
+				<p>When I graduated high school, I was accepted to a film program at SFSU but couldn’t afford it, but I eventually ended up at CCSF. I entered the Cisco Networking Academy because being in San Francisco made me want to be part of the tech industry there, but I did not like the idea of programming. I figured I could make an impact by maintaining networks. I took classes there with Sam Bowne. His passion for security nurtured my interest in hacking and motivated me to take more Information Security classes there. I started working for Children’s Hospital Oakland after I graduated which was my first tech job. I had no plans to get a BS since there were no degree programs related to networking in the bay area, but after having a conversation with Sam, he told me to get a degree, so I don’t limit my opportunities for career growth.
+				</p>
+				<p>I applied to CSUMB since they have an emphasis for Network and Security. Here I learned that I enjoyed programming. I also met people who are also passionate InfoSec after I founded the Information Security club. My progress has been a slower than expected pace since I must balance work and school, but I’ll be completing the program this year and plan to get my MS next.
+				</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
