--- a/cv.html
+++ b/cv.html
@@ -1,1 +1,85 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>C.V.</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+			      <li><a href="/cv">C.V.</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>C.V.</h1>
+				<p>
+Pedro Muñoz
+OBJECTIVE
+Provide leadership to an organization by focusing internal IT efforts on user-centered solutions while increasing efficiencies, security, and networked system effectiveness. I have a passion for supporting people, their technology, and end-user satisfaction.
+SKILLS & ABILITIES
+• MacOS and Windows technical support
+• Cisco IOS
+• Comfortable with Linux environments
+• PowerShell scripting for Active Directory maintenance
+• Virtualization
+• Excellent communication skills
+• Reliable and Dedicated
+EXPERIENCE
+Systems Engineer – Imprivata
+Stanford, CA
+Stanford Health Care
+2017 - Current
+Planned and upgraded outdated Imprivata appliance software at a recently acquired community hospital. Planning included testing and reconfiguring application profiles.
+Worked with Citrix team to implement Imprivata SSO for use with legacy applications hosted in virtualized environment.
+Planned and deployed Imprivata OneSign entire Main Hospital. Planning for this aspect meant going to each department to determine their readiness for OneSign, including working with several application owners to create profile for each application.
+Create SSO profiles for web-, thick-, and java-based applications.
+Worked with Desktop Engineer to create and validate installation package.
+Provide tier 2 support for end-users experiencing issues with OneSign.
+Business/Technical Support Analyst II
+Oakland, CA
+UCSF Benioff Children’s Hospital
+2013 - 2017
+Providing end-user Tier 2 support by troubleshooting and resolving issues occurring in standard workstation applications such as Epic Hyperspace and Novell applications.
+Maintaining Imprivata SSO appliance as well as troubleshooting client application issues while performing computer and user policy updates and user account maintenance to ensure allotted licenses are up to date.
+Creating new profiles that automatically log users into various applications.
+Imaging, configuring, and deploying new computers and working with Bio-Medical Engineering to resolve issues beyond scope.
+Supporting all departments on campus and in local satellite offices with hardware troubleshooting and equipment setup.
+Installation Technician Oakland, CA
+Portable CIO 2013
+Contracted for new hardware deployment at the Children’s Hospital, Oakland.
+Surveyed department’s readiness for deployment of updated workstations.
+Provided training to Children’s Hospital staff on newly deployed hardware and software.
+Documenting detailed information on newly deployed hardware and reporting on
+scripting, installation, and compatibility issues.
+Lead Teller San Francisco, CA
+J.P Morgan-Chase 2011 - 2013
+Providing customer service, employing adept interpersonal skills, and serving as a
+resource for team members and customers.
+Enforcing policies and procedures set in place by J.P. Morgan to identify and prevent
+fraud.
+Consistently keeping cash drawers balanced with little or no losses. Managing team
+schedules, ordering supplies for the branch, and keeping records for audits up to date and
+accurate.
+EDUCATION
+California State University Monterey Bay, Seaside, CA Fall 2018
+Bachelor of Science, Computer Science and Information Technology
+Network and Security Emphasis
+Information Security Club, President
+City College of San Francisco, San Francisco, CA Spring 2013
+Associate of Science, Computer Networking and Information Technology
+Cisco Networking Academy
+CERTIFICATIONS
+Imprivata Certified Engineer – 2/2014</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
+        		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
