--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
+			<li><a href="/cv">C.V.</a></li>
+
     		</ul>
 		</nav>
 		<div class="container">
