--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     		<ul>
         		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
         		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
+			<li><a href="https://www.linkedin.com/in/munozpedro/>LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
