--- a/cv.html
+++ b/cv.html
@@ -79,6 +79,7 @@ Imprivata Certified Engineer – 2/2014</p>
     		<ul>
         		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
         		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
+			<li><a href="https://www.linkedin.com/in/munozpedro/>LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
