--- a/cv.html
+++ b/cv.html
@@ -77,8 +77,8 @@ Imprivata Certified Engineer – 2/2014</p>
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
-        		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
+        		<li><a href="mailto:pmunoz@csumb.edu">Email</a></li>
+        		<li><a href="https://github.com/munoz">GitHub</a></li>
 			<li><a href="https://www.linkedin.com/in/munozpedro/>LinkedIn</a></li>
 			</ul>
 		</footer>
