--- a/cv.html
+++ b/cv.html
@@ -15,11 +15,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>C.V.</h1>
-				<p>
-Pedro Muñoz
-OBJECTIVE
-Provide leadership to an organization by focusing internal IT efforts on user-centered solutions while increasing efficiencies, security, and networked system effectiveness. I have a passion for supporting people, their technology, and end-user satisfaction.
-SKILLS & ABILITIES
+			<h1>OBJECTIVE</h1>
+			<p>Provide leadership to an organization by focusing internal IT efforts on user-centered solutions while increasing efficiencies, 			security, and networked system effectiveness. I have a passion for supporting people, their technology, and end-user satisfaction.</p>
+			<h1>SKILLS & ABILITIES</h1>
 • MacOS and Windows technical support
 • Cisco IOS
 • Comfortable with Linux environments
@@ -27,8 +25,8 @@ SKILLS & ABILITIES
 • Virtualization
 • Excellent communication skills
 • Reliable and Dedicated
-EXPERIENCE
-Systems Engineer – Imprivata
+			<h1>EXPERIENCE</h1>
+<b>Systems Engineer – Imprivata</b>
 Stanford, CA
 Stanford Health Care
 2017 - Current
@@ -38,7 +36,7 @@ Planned and deployed Imprivata OneSign entire Main Hospital. Planning for this a
 Create SSO profiles for web-, thick-, and java-based applications.
 Worked with Desktop Engineer to create and validate installation package.
 Provide tier 2 support for end-users experiencing issues with OneSign.
-Business/Technical Support Analyst II
+<b>Business/Technical Support Analyst II</b>
 Oakland, CA
 UCSF Benioff Children’s Hospital
 2013 - 2017
@@ -47,14 +45,16 @@ Maintaining Imprivata SSO appliance as well as troubleshooting client applicatio
 Creating new profiles that automatically log users into various applications.
 Imaging, configuring, and deploying new computers and working with Bio-Medical Engineering to resolve issues beyond scope.
 Supporting all departments on campus and in local satellite offices with hardware troubleshooting and equipment setup.
-Installation Technician Oakland, CA
+<b>Installation Technician</b> 
+Oakland, CA
 Portable CIO 2013
 Contracted for new hardware deployment at the Children’s Hospital, Oakland.
 Surveyed department’s readiness for deployment of updated workstations.
 Provided training to Children’s Hospital staff on newly deployed hardware and software.
 Documenting detailed information on newly deployed hardware and reporting on
 scripting, installation, and compatibility issues.
-Lead Teller San Francisco, CA
+<b>Lead Teller</b> 
+San Francisco, CA
 J.P Morgan-Chase 2011 - 2013
 Providing customer service, employing adept interpersonal skills, and serving as a
 resource for team members and customers.
@@ -63,7 +63,7 @@ fraud.
 Consistently keeping cash drawers balanced with little or no losses. Managing team
 schedules, ordering supplies for the branch, and keeping records for audits up to date and
 accurate.
-EDUCATION
+<h1>EDUCATION</h1>
 California State University Monterey Bay, Seaside, CA Fall 2018
 Bachelor of Science, Computer Science and Information Technology
 Network and Security Emphasis
@@ -71,7 +71,7 @@ Information Security Club, President
 City College of San Francisco, San Francisco, CA Spring 2013
 Associate of Science, Computer Networking and Information Technology
 Cisco Networking Academy
-CERTIFICATIONS
+</h>CERTIFICATIONS</h>
 Imprivata Certified Engineer – 2/2014</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
@@ -79,7 +79,7 @@ Imprivata Certified Engineer – 2/2014</p>
     		<ul>
         		<li><a href="mailto:pmunoz@csumb.edu">Email</a></li>
         		<li><a href="https://github.com/munoz">GitHub</a></li>
-			<li><a href="https://www.linkedin.com/in/munozpedro/>LinkedIn</a></li>
+			<li><a href="https://www.linkedin.com/in/munozpedro/">LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
