--- a/cv.html
+++ b/cv.html
@@ -15,17 +15,19 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>C.V.</h1>
-			<h1>OBJECTIVE</h1>
-			<p>Provide leadership to an organization by focusing internal IT efforts on user-centered solutions while increasing efficiencies, 			security, and networked system effectiveness. I have a passion for supporting people, their technology, and end-user satisfaction.</p>
-			<h1>SKILLS & ABILITIES</h1>
-• MacOS and Windows technical support
-• Cisco IOS
-• Comfortable with Linux environments
-• PowerShell scripting for Active Directory maintenance
-• Virtualization
-• Excellent communication skills
-• Reliable and Dedicated
-			<h1>EXPERIENCE</h1>
+			<h2>OBJECTIVE</h2>
+			<p1>Provide leadership to an organization by focusing internal IT efforts on user-centered solutions while increasing efficiencies, security, and networked system effectiveness. I have a passion for supporting people, their technology, and end-user satisfaction.</p1>
+			<h2>SKILLS & ABILITIES</h2>
+      <ul>      
+          <li><p1>MacOS and Windows technical support</p1></li>
+          <li><p1>Cisco IOS</p1></li>
+          <li><p1>Comfortable with Linux environments</p1></li>
+          <li><p1>PowerShell scripting for Active Directory maintenance</p1></li>
+          <li><p1>Virtualization</p1></li>
+          <li><p1>Excellent communication skills</p1></li>
+          <li><p1>Reliable and Dedicated</p1></li>
+      </ul>
+			<h2>EXPERIENCE</h2>
 <b>Systems Engineer – Imprivata</b>
 Stanford, CA
 Stanford Health Care
@@ -63,7 +65,7 @@ fraud.
 Consistently keeping cash drawers balanced with little or no losses. Managing team
 schedules, ordering supplies for the branch, and keeping records for audits up to date and
 accurate.
-<h1>EDUCATION</h1>
+<h2>EDUCATION</h2>
 California State University Monterey Bay, Seaside, CA Fall 2018
 Bachelor of Science, Computer Science and Information Technology
 Network and Security Emphasis
