--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
         		<h1>C.V.</h1>
 			<h2>OBJECTIVE</h2>
 			<p1>Provide leadership to an organization by focusing internal IT efforts on user-centered solutions while increasing efficiencies, security, and networked system effectiveness. I have a passion for supporting people, their technology, and end-user satisfaction.</p1>
-			<h2>SKILLS & ABILITIES</h2>
+			<h2>SKILLS and ABILITIES</h2>
       <ul>      
           <li><p1>MacOS and Windows technical support</p1></li>
           <li><p1>Cisco IOS</p1></li>
