--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
-        		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
-			<li><a href="https://www.linkedin.com/in/munozpedro/>LinkedIn</a></li>
+        		<li><a href="mailto:pmunoz@csumb.edu">Email</a></li>
+        		<li><a href="https://github.com/munoz">GitHub</a></li>
+			<li><a href="https://www.linkedin.com/in/munozpedro/">LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
