--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:pmunoz@csumb.edu">email</a></li>
-        		<li><a href="https://github.com/munoz">github.com/munoz</a></li>
-			<li><a href="https://www.linkedin.com/in/munozpedro/>LinkedIn</a></li>
+    			<ul>
+        			<li><a href="mailto:pmunoz@csumb.edu">Email</a></li>
+        			<li><a href="https://github.com/munoz">GitHub</a></li>
+				<li><a href="https://www.linkedin.com/in/munozpedro/">LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
