--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hello, I'm Pedro!</h1>
-				<p><a href="/about">Read more about me.</a></p>
+        		<h1>Pedro Muñoz</h1>
+			<p><a href="/about">Read more about me.</a></p>
+			<p><a href="/cv">Take a look at my resume.</a></p>
+			<p><a href="https://github.com/munoz">Here are projects I'm currently working on.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
