--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
+			<li><a href="/projects">Projects</a></li>
 			<li><a href="/cv">C.V.</a></li>
     		</ul>
 		</nav>
@@ -17,7 +18,7 @@
         		<h1>Pedro Muñoz</h1>
 			<p><a href="/about">Read more about me.</a></p>
 			<p><a href="/cv">Take a look at my resume.</a></p>
-			<p><a href="https://github.com/munoz">Here are projects I'm currently working on.</a></p>
+			<p><a href="/projects">Here are projects I'm currently working on.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
